crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__dynamodb-arrow_tpch_simple_q1_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q1"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                      |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Aggregate: groupBy=[[]], aggr=[[max(lineitem.l_orderkey)]]                                                                                                                                |
|               |   BytesProcessedNode                                                                                                                                                                      |
|               |     TableScan: lineitem projection=[l_orderkey]                                                                                                                                           |
| physical_plan | AggregateExec: mode=Final, gby=[], aggr=[max(lineitem.l_orderkey)]                                                                                                                        |
|               |   CoalescePartitionsExec                                                                                                                                                                  |
|               |     AggregateExec: mode=Partial, gby=[], aggr=[max(lineitem.l_orderkey)]                                                                                                                  |
|               |       BytesProcessedExec                                                                                                                                                                  |
|               |         SchemaCastScanExec                                                                                                                                                                |
|               |           DataSourceExec: partitions=32, partition_sizes=[47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 46, 46, 76] |
|               |                                                                                                                                                                                           |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
