crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__dynamodb-arrow_tpch_simple_q2_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q2"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                          |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: lineitem.l_linenumber                                                                                                                                                             |
|               |   Inner Join: lineitem.l_linenumber = __scalar_sq_1.max(lineitem.l_linenumber)                                                                                                                |
|               |     BytesProcessedNode                                                                                                                                                                        |
|               |       TableScan: lineitem projection=[l_linenumber]                                                                                                                                           |
|               |     SubqueryAlias: __scalar_sq_1                                                                                                                                                              |
|               |       Aggregate: groupBy=[[]], aggr=[[max(lineitem.l_linenumber)]]                                                                                                                            |
|               |         BytesProcessedNode                                                                                                                                                                    |
|               |           TableScan: lineitem projection=[l_linenumber]                                                                                                                                       |
| physical_plan | CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                   |
|               |   HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(max(lineitem.l_linenumber)@0, l_linenumber@0)], projection=[l_linenumber@1]                                                           |
|               |     AggregateExec: mode=Final, gby=[], aggr=[max(lineitem.l_linenumber)]                                                                                                                      |
|               |       CoalescePartitionsExec                                                                                                                                                                  |
|               |         AggregateExec: mode=Partial, gby=[], aggr=[max(lineitem.l_linenumber)]                                                                                                                |
|               |           BytesProcessedExec                                                                                                                                                                  |
|               |             SchemaCastScanExec                                                                                                                                                                |
|               |               DataSourceExec: partitions=32, partition_sizes=[47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 46, 46, 76] |
|               |     BytesProcessedExec                                                                                                                                                                        |
|               |       SchemaCastScanExec                                                                                                                                                                      |
|               |         DataSourceExec: partitions=32, partition_sizes=[47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 47, 46, 46, 76]       |
|               |                                                                                                                                                                                               |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
