crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__dynamodb-duckdb[file]_tpch_q13_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_q13"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|               |  Sort: custdist DESC NULLS FIRST, c_orders.c_count DESC NULLS FIRST                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
|               |   Projection: c_orders.c_count, count(Int64(1)) AS custdist                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
|               |     Aggregate: groupBy=[[c_orders.c_count]], aggr=[[count(Int64(1))]]                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |       SubqueryAlias: c_orders                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|               |         Projection: count(orders.o_orderkey) AS c_count                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
|               |           Aggregate: groupBy=[[customer.c_custkey]], aggr=[[count(orders.o_orderkey)]]                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
|               |             Left Join:  Filter: customer.c_custkey = orders.o_custkey                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |               TableScan: customer projection=[c_custkey]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|               |               TableScan: orders projection=[o_custkey, o_orderkey], full_filters=[orders.o_comment NOT LIKE Utf8("%special%requests%")]                                                                                                                                                                                                                                                                                                                                                                                                    |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
|               |   CooperativeExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
|               |     BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
|               |       VirtualExecutionPlan name=duckdb compute_context=//data/accelerated_duckdb.db base_sql=SELECT "c_orders"."c_count", count(1) AS "custdist" FROM (SELECT count("orders"."o_orderkey") AS "c_count" FROM "customer" LEFT OUTER JOIN "orders" ON (("customer"."c_custkey" = "orders"."o_custkey") AND "orders"."o_comment" NOT LIKE '%special%requests%') GROUP BY "customer"."c_custkey") AS "c_orders" GROUP BY "c_orders"."c_count" ORDER BY "custdist" DESC NULLS FIRST, "c_orders"."c_count" DESC NULLS FIRST |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
